fixed padding issues on small screens

--- a/css/image-grid.css
+++ b/css/image-grid.css
@@ -23,11 +23,11 @@ body {
   line-height: 1.2;
   font-family: "Tajawal", "Gill Sans", "Gill Sans MT", "Trebuchet MS",
     sans-serif;
-  background: rgb(19, 19, 19);
+  background: rgb(9, 8, 8);
 }
 
 nav {
-  background-color: rgba(0, 0, 9.1, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
   width: 100%;
   height: 80px;
   align-items: center;
@@ -107,16 +107,17 @@ label #cancel {
   font-weight: 300;
 }
 
-.photo-grid {
-  display: grid;
-  gap: 0.8rem;
-  padding: 0 0.8rem;
-  margin-top: 0.6rem;
-  grid-template-columns: repeat(auto-fit, minmax(390px, 1fr));
-  grid-auto-rows: 390px;
-}
+
 
 @media screen and (min-width: 300px) {
+  .photo-grid {
+    gap: 0.2rem;
+    padding: 0;
+    margin-top: 0.3rem;
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+    grid-auto-rows: 370px;
+  }
+
   #card {
     grid-row: span 2 / auto;
   }
@@ -156,6 +157,13 @@ label #cancel {
 }
 
 @media screen and (min-width: 600px) {
+  .photo-grid {
+    gap: 0.2rem;
+    padding: 0;
+    margin-top: 0.3rem;
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+    grid-auto-rows: 370px;
+  }
   .card-tall {
     grid-row: span 2 / auto;
   }
@@ -227,6 +235,14 @@ label #cancel {
   nav ul li {
     margin: 0.1rem 7.4rem;
     padding: 0.7rem 0.8rem;
+  }
+  .photo-grid {
+    display: grid;
+    gap: 0.6rem;
+    padding: 0 0.6rem;
+    margin-top: 0.6rem;
+    grid-template-columns: repeat(auto-fit, minmax(390px, 1fr));
+    grid-auto-rows: 390px;
   }
 }
 
